<resources>
    <string name="app_name">TaskTimer</string>
    <string name="action_settings">Settings</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menutitle_showDurations">Durations Report</string>
    <string name="menutitle_showAbout">About TaskTImer</string>
    <string name="menutitle_generate">Generate Data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="btn_edit_task_item">Button to edit a task details</string>
    <string name="btn_delete_task_item">Delete the task</string>
    <string name="edit_task_hint">Task Name Requiered</string>
    <string name="edit_task_description">Task Description (optional)</string>
    <string name="edit_task_sort">Order: sorts low to high</string>
    <string name="btn_edit_task_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
