<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.zlrx.tasktimer.MainActivity">
    <item android:title="@string/menutitle_addTask"
          android:id="@+id/mainMenuAddTask"
          android:icon="@android:drawable/ic_menu_add"
          app:showAsAction="ifRoom"
          android:orderInCategory="10"/>

    <item android:title="@string/menutitle_showDurations"
          android:id="@+id/mainMenuShowDurations"
          android:icon="@android:drawable/ic_menu_view"
          app:showAsAction="ifRoom"
          android:orderInCategory="20"/>

    <item android:id="@+id/mainMenuSettings"
          android:title="@string/action_settings"
          app:showAsAction="never"
          android:orderInCategory="30"/>

    <item android:title="@string/menutitle_showAbout"
          android:id="@+id/mainMenuShowAbout"
          android:icon="@android:drawable/ic_menu_info_details"
          app:showAsAction="ifRoom"
          android:orderInCategory="40"/>

    <item android:title="@string/menutitle_generate"
          android:orderInCategory="50"
          android:id="@+id/mainMenuGenerate"
          app:showAsAction="never"
          android:visible="false"/>
</menu>
